Make the base XALAN macro not assume directories for files.  Use XALAN.xmldir for the more specialised variant.  Remove explicit Java invocation for metadata import and replace it with a XALAN call.